# advent-of-code

./: .gitignore
.idx/: dev.nix
2021/: Cargo.toml  download  example  init
2022/: init.sh
2023/: Cargo.toml  download  init  rust-toolchain.toml
2023/src/: main.rs  utils.rs
2023/src/d01/: description.txt  example.txt  mod.rs
2023/src/d02/: description.txt  example.txt  mod.rs
2023/src/d03/: description.txt  example.txt  mod.rs
2023/src/d04/: description.txt  example.txt  mod.rs
2023/src/d05/: description.txt  example.txt  mod.rs
2023/src/d06/: description.txt  example.txt  mod.rs
2023/src/d07/: description.txt  example.txt  mod.rs
2023/src/d08/: description.txt  example.txt  mod.rs
2023/src/d09/: description.txt  example.txt  mod.rs
2023/src/d10/: example.txt  mod.rs
2023/src/d11/: description.txt  example.txt  mod.rs
2023/src/d12/: description.txt  example.txt  mod.rs
2023/src/d13/: description.txt  example.txt  mod.rs
2023/src/d14/: description.txt  example.txt  mod.rs
2023/src/d15/: description.txt  example.txt  mod.rs
2023/src/d16/: description.txt  example.txt  mod.rs
2023/src/d17/: description.txt  example.txt  mod.rs
2023/src/d18/: description.txt  example.txt  mod.rs
2023/src/d19/: description.txt  example.txt  mod.rs
2023/src/d20/: description.txt  example.txt  mod.rs
2023/src/d21/: description.txt  example.txt  mod.rs
2023/src/d22/: example.txt  mod.rs
2023/src/d23/: description.txt  example.txt  mod.rs
2023/src/d24/: description.txt  example.txt  mod.rs
2023/src/d25/: description.txt  example.txt  mod.rs
(+181 files in other folders)
