[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
bitvec-nom2 = "0.2.0"
clap = { version = "4.4.6", features = ["derive"] }
hex = "0.4.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
nom = "7.1.3"
num = "0.4.1"
num-rational = "0.4.2"
pathfinding = "4.3.3"
rand = "0.8.5"
ranges = "0.4.0"
rayon = "1.8.0"
regex = "1.10.2"
roots = "0.0.8"
